Add notes and open source contribs section in links

--- a/content/notes/linux_stuff/useful_scripts.mdx
+++ b/content/notes/linux_stuff/useful_scripts.mdx
@@ -1,9 +1,12 @@
+```toc
+# This code block gets replaced with the TOC
+```
+
 # POSIX systems
 
 Scripts in bourne shell/bash, Python, Perl etc.
 
 Obviously, some may work on non-POSIX systems but it's not guaranteed.
-
 
 ## Bash aliases
 
