Fix typos and grammar mistakes

--- a/content/posts/new-website.mdx
+++ b/content/posts/new-website.mdx
@@ -24,7 +24,7 @@ forums, nor user registration.
 
 For all practical purposes, I'd be better served by plain old static content.
 
-But I am a lazy person, and I don't want to hand craft too much HTML and CSS,
+But I am a lazy person, and I don't want to handcraft too much HTML and CSS,
 and I don't want to manually copy common navigation elements between static HTML pages.
 
 Having some dynamic fireworks available wouldn't hurt as well.
@@ -38,9 +38,9 @@ Gatsby works pretty well as a
 and can support dynamic React content through the process known as
 [rehydration](https://www.gatsbyjs.com/docs/conceptual/react-hydration/).
 
-I could use this to support things like e.g. dynamically calculation years
+I could use this to support things like e.g. dynamically calculating years
 elapsed since the last job change on my <Navlink to="/resume" text="resume"/> (which,
 BTW, is a topic for another blog post).
 
-Anyway, if you can read this, the new tech seems to be working well and hopefully
+Anyway, if you can read this, the new tech seems to be working well and, hopefully,
 I'll be reporting more about it in later blog posts!
