--- a/content/posts/new-website.mdx
+++ b/content/posts/new-website.mdx
@@ -7,7 +7,7 @@ import Navlink from "gatsby-theme-blog/src/components/navlink"
 
 So, after a few years of my website being down because of my free
 [OpenShift](https://www.openshift.com) container expiring, I finally
-got to getting it back up.
+got to getting it back up as a long weekend project.
 
 I took this opportunity to rethink my approach and try something different.
 
