TOC implementation for notes

--- a/content/notes/linux_stuff/useful_scripts.mdx
+++ b/content/notes/linux_stuff/useful_scripts.mdx
@@ -1,3 +1,7 @@
+import Toc from "gatsby-theme-blog/src/components/toc"
+
+<span><Toc tableOfContents={props.tableOfContents}/></span>
+
 # POSIX systems
 
 Scripts in bourne shell/bash, Python, Perl etc.
