Pull custom components out of plugin source shadowing dirs

--- a/content/notes/linux_stuff/useful_scripts.mdx
+++ b/content/notes/linux_stuff/useful_scripts.mdx
@@ -1,4 +1,4 @@
-import Toc from "gatsby-theme-blog/src/components/toc"
+import Toc from "src/components/toc"
 
 <span><Toc tableOfContents={props.tableOfContents}/></span>
 
