--- a/content/posts/new-website.mdx
+++ b/content/posts/new-website.mdx
@@ -3,7 +3,7 @@ title: New website
 date: 2021-01-18
 ---
 
-import Navlink from "gatsby-theme-blog/src/components/navlink"
+import Navlink from "src/components/navlink"
 
 So, after a few years of my website being down because of my free
 [OpenShift](https://www.openshift.com) container expiring, I finally
