Remaining pages title SEO

--- a/content/notes/linux_stuff/linux_perf_tuning.mdx
+++ b/content/notes/linux_stuff/linux_perf_tuning.mdx
@@ -1,3 +1,7 @@
+import Helmet from "react-helmet"
+
+<Helmet title="Aleksander Adamowski - Linux Perf Tuning" />
+
 # Random Linux performance analysis and tuning notes
 
 Time the syscalls:
