--- a/content/notes/linux_stuff/useful_scripts.mdx
+++ b/content/notes/linux_stuff/useful_scripts.mdx
@@ -1,5 +1,7 @@
+import Helmet from "react-helmet"
 import Toc from "src/components/toc"
 
+<Helmet title="Aleksander Adamowski - Useful Scripts" />
 <span><Toc tableOfContents={props.tableOfContents}/></span>
 
 # POSIX systems
