Add no-fork cat in bash

--- a/content/notes/linux_stuff/useful_scripts.mdx
+++ b/content/notes/linux_stuff/useful_scripts.mdx
@@ -25,6 +25,11 @@ alias mkdir_cd_curtimestamp='mkdir $(date +%F_%H_%M_%S); cd $_'
 ```
 
 
+## No-fork cat in bash
+
+```
+clear IFS= read -rd '' contents < /proc/self/status; echo "$contents"
+```
 
 ## Epoch timestamp to current date
 
